k8s-manifests/exp/sample.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exp
  namespace: exponentify
  labels:
    app: exp
spec:
  selector:
    matchLabels:
      app: exp
  replicas: 1
  template:
    metadata:
      labels:
        app: exp
    spec:
      containers:
      - name: exp
        image: registry.alislight.com/exp:1.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred
