k8s-manifests/exp/exp_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: exp
  namespace: exponentify
spec:
  selector:
    app: exp
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
