k8s-manifests/exp/exp_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exp
  namespace: exponentify
  labels:
    app: exp
spec:
  selector:
    matchLabels:
      app: exp
  replicas: 1
  template:
    metadata:
      labels:
        app: exp
    spec:
      containers:
      - name: exp
        image: registry.alislight.com/exp:1.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: exp
  namespace: exponentify
spec:
  selector:
    app: exp
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exp
  namespace: exponentify
#  annotations:
spec:
  ingressClassName: nginx
  tls:
  - secretName: exp-tls
  rules:
  - host: "exponentify.com"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: exp
              port:
                number: 8080
