k8s-manifests/exp/exp_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exp-ingressresource
  namespace: exponentify
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
#  tls:
#  - secretName: tls-secret
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: exp
              port:
                number: 8088
