k8s-manifests/exp/ingress_resources.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressresource
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
#  tls:
#  - secretName: tls-secret
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-svc
              port:
                number: 8088
